package study.ui;

public interface Target {

  public void flush(String source);
}
